[package]
name = "rcas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures = "0.3.25"
notify = "5.0.0"
quick-xml = "0.25.0"
serde = { version = "1.0.145", features = ["derive"] }
shellexpand = "2.1.2"
